task: load visitors data list into layout

--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -60,7 +60,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginEnd="@dimen/y53"
-                            android:text="1/6"
+                            android:text="-/-"
                             android:textColor="@color/color_adadad"
                             android:textSize="@dimen/sp12"
                             android:visibility="visible"
@@ -81,7 +81,7 @@
                             android:gravity="end"
                             android:maxLines="1"
                             android:singleLine="true"
-                            android:text="最近30天来访15次"
+                            android:text="最近-天来访-次"
                             android:textColor="@color/color_999999"
                             android:textSize="@dimen/sp12"
                             android:visibility="visible"
