--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -29,8 +29,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <com.cylan.jiafeigou.widget.WrapContentViewPager
-                        android:id="@+id/cam_message_face"
+                    <FrameLayout
+                        android:id="@+id/fLayout_message_face"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintBottom_toTopOf="@+id/cam_message_indicator_holder"
@@ -50,7 +50,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/cam_message_face">
+                        app:layout_constraintTop_toBottomOf="@+id/fLayout_message_face">
 
 
                         <TextView
