--- a/app/src/main/res/layout/message_face_page.xml
+++ b/app/src/main/res/layout/message_face_page.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/message_face_page_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/message_face_page_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingEnd="@dimen/y15"
-        android:paddingStart="@dimen/y15" />
-
-</LinearLayout>
+    android:layout_height="match_parent"
+    android:paddingEnd="@dimen/y15"
+    android:paddingStart="@dimen/y15" />
