--- a/app/src/main/res/layout/layout_face_list_header.xml
+++ b/app/src/main/res/layout/layout_face_list_header.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/y25"
+    android:paddingTop="@dimen/y25">
 
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y64"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:paddingEnd="@dimen/y16"
         android:paddingStart="@dimen/y16"
