--- a/app/src/main/res/layout/item_face_selection.xml
+++ b/app/src/main/res/layout/item_face_selection.xml
@@ -21,7 +21,7 @@
             app:civ_border_width="@dimen/y2"
             app:civ_hint_color="@color/color_red"
             app:civ_hint_radius="@dimen/y4"
-            app:civ_show_hint="true" />
+            app:civ_show_hint="false" />
 
         <ImageView
             android:id="@+id/stranger_icon"
