--- a/app/src/main/res/layout/fragment_face_information.xml
+++ b/app/src/main/res/layout/fragment_face_information.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
+    android:clickable="true"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.ads.AdsActivity">
