--- a/app/src/main/res/layout/fragment_face_create.xml
+++ b/app/src/main/res/layout/fragment_face_create.xml
@@ -36,13 +36,18 @@
 
         <EditText
             android:id="@+id/name"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/y150"
             android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
             android:layout_marginEnd="@dimen/y20"
             android:layout_marginStart="@dimen/y20"
             android:background="@null"
             android:gravity="center"
             android:hint="@string/LOCATION_NAME_ERROR"
+            android:maxEms="24"
+            android:maxLength="24"
+            android:maxLines="1"
+            android:singleLine="true"
             android:textColor="@color/color_666666"
             android:textColorHint="@color/color_cecece"
             android:textCursorDrawable="@drawable/bg_common_cursor"
