--- a/app/src/main/res/layout/fragment_face_create.xml
+++ b/app/src/main/res/layout/fragment_face_create.xml
@@ -27,10 +27,9 @@
         android:layout_marginTop="@dimen/y48"
         android:src="@drawable/icon_mine_head_normal" />
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/y54"
-
         android:layout_marginTop="@dimen/y40">
 
 
@@ -38,8 +37,8 @@
             android:id="@+id/name"
             android:layout_width="@dimen/y150"
             android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginEnd="@dimen/y20"
             android:layout_marginStart="@dimen/y20"
             android:background="@null"
             android:gravity="center"
@@ -53,13 +52,24 @@
             android:textCursorDrawable="@drawable/bg_common_cursor"
             android:textSize="@dimen/sp15" />
 
+        <ImageView
+            android:id="@+id/clear_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/y15"
+            android:layout_toEndOf="@+id/name"
+            android:src="@drawable/icon_clear_text"
+            android:visibility="invisible" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/y1"
+            android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             android:layout_marginBottom="@dimen/y7"
             android:layout_marginEnd="@dimen/y20"
             android:layout_marginStart="@dimen/y20"
             android:background="@color/color_f2f2f2" />
-    </FrameLayout>
+    </RelativeLayout>
 </LinearLayout>
