--- a/app/src/main/res/layout/fragment_visitor_list.xml
+++ b/app/src/main/res/layout/fragment_visitor_list.xml
@@ -1,6 +1,4 @@
 <com.cylan.jiafeigou.widget.WrapContentViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/vp_default"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.cylan.jiafeigou.n.view.cam.VisitorListFragment" />
+    android:layout_height="match_parent" />
