--- a/app/src/main/res/layout/item_face_selection.xml
+++ b/app/src/main/res/layout/item_face_selection.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/y20">
+    <!--<FrameLayout-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center_horizontal"-->
+    <!--android:layout_marginTop="@dimen/y20">-->
 
-        <com.cylan.jiafeigou.support.photoselect.CircleImageView
-            android:id="@+id/img_item_face_selection"
-            android:layout_width="@dimen/y60"
-            android:layout_height="@dimen/y60"
-            android:src="@drawable/news_icon_stranger"
-            app:civ_border_color="@color/color_36BDFF"
-            app:civ_border_overlay="true"
-            app:civ_border_width="@dimen/y2"
-            app:civ_hint_color="@color/color_red"
-            app:civ_hint_radius="@dimen/y4"
-            app:civ_show_hint="false" />
+    <com.cylan.jiafeigou.support.photoselect.CircleImageView
+        android:id="@+id/img_item_face_selection"
+        android:layout_width="@dimen/y60"
+        android:layout_height="@dimen/y60"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/y20"
+        android:src="@drawable/news_icon_stranger"
+        app:civ_border_color="@color/color_36BDFF"
+        app:civ_border_overlay="true"
+        app:civ_border_width="@dimen/y2"
+        app:civ_hint_color="@color/color_red"
+        app:civ_hint_radius="@dimen/y4"
+        app:civ_show_hint="false" />
 
-        <ImageView
-            android:id="@+id/stranger_icon"
-            android:layout_width="@dimen/y20"
-            android:layout_height="@dimen/y20"
-            android:layout_gravity="end"
-            android:src="@drawable/icon_stranger" />
-    </FrameLayout>
+    <ImageView
+        android:id="@+id/stranger_icon"
+        android:layout_width="@dimen/y20"
+        android:layout_height="@dimen/y20"
+        android:layout_alignEnd="@+id/img_item_face_selection"
+        android:layout_alignTop="@+id/img_item_face_selection"
+        android:layout_gravity="end"
+        android:layout_marginEnd="-2dp"
+        android:layout_marginTop="-2dp"
+        android:src="@drawable/icon_stranger" />
+    <!--</FrameLayout>-->
 
     <TextView
-        android:layout_gravity="center_horizontal"
         android:id="@+id/text_item_face_selection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/img_item_face_selection"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y8"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp13" />
 
-</LinearLayout>
+</RelativeLayout>
