--- a/app/src/main/res/layout/layout_face_delete_pop_alert.xml
+++ b/app/src/main/res/layout/layout_face_delete_pop_alert.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="start"
                 android:text="@string/MESSAGES_DELETE_POP"
                 android:textColor="@color/color_666666"
                 android:textSize="@dimen/sp16" />
