--- a/app/src/main/res/layout/fragment_face_manager.xml
+++ b/app/src/main/res/layout/fragment_face_manager.xml
@@ -36,7 +36,7 @@
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
