--- a/app/src/main/res/layout/fragment_visitor_list.xml
+++ b/app/src/main/res/layout/fragment_visitor_list.xml
@@ -8,7 +8,8 @@
         android:id="@+id/vp_default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/y18" />
+        android:layout_marginBottom="@dimen/y18"
+        app:vp_need_wrap="true" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/cam_message_indicator_holder"
