--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -1,4 +1,4 @@
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cylan.jiafeigou.widget.ViewPagerSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/srLayout_cam_list_refresh"
     android:layout_width="match_parent"
@@ -54,7 +54,8 @@
                         android:paddingLeft="@dimen/x15"
                         android:paddingRight="@dimen/x15"
                         android:text="@string/BACK"
-                        android:textColor="@color/common_btn_color_state" />
+                        android:textColor="@color/common_btn_color_state"
+                        android:visibility="invisible" />
 
                     <TextView
                         android:id="@+id/tv_cam_message_list_date"
@@ -64,7 +65,6 @@
                         android:layout_gravity="center"
                         android:clickable="true"
                         android:drawablePadding="@dimen/x10"
-                        android:enabled="false"
                         android:gravity="center_vertical" />
 
                     <TextView
@@ -87,11 +87,11 @@
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:layout_gravity="center_vertical"
-                        android:clickable="true"
                         android:layout_marginEnd="@dimen/y12"
+                        android:clickable="true"
                         android:focusable="true"
-                        android:tag="@drawable/btn_unfolded"
-                        android:src="@drawable/btn_unfolded" />
+                        android:src="@drawable/btn_unfolded"
+                        android:tag="arrow_up" />
 
                     <View
                         android:layout_width="match_parent"
@@ -180,4 +180,4 @@
                 android:textColor="@color/common_btn_color_state" />
         </FrameLayout>
     </android.support.design.widget.CoordinatorLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+</com.cylan.jiafeigou.widget.ViewPagerSwipeRefreshLayout>
