--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -113,16 +113,14 @@
 
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/lLayout_no_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_behavior="com.cylan.jiafeigou.widget.AlwaysCenterBehavior">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center"
                 android:drawablePadding="@dimen/y16"
                 android:drawableTop="@drawable/pic_nomessage"
                 android:gravity="center_horizontal"
