--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -115,6 +115,8 @@
             android:id="@+id/lLayout_no_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
             app:layout_behavior="com.cylan.jiafeigou.widget.AlwaysCenterBehavior">
 
             <TextView
