--- a/app/src/main/res/layout/fragment_home_wonderful_ext.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_ext.xml
@@ -86,33 +86,28 @@
         android:id="@+id/fLayout_main_content_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color_white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <FrameLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rV_wonderful_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="0dp"
-            android:background="@color/color_white">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rV_wonderful_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <FrameLayout
-                android:id="@+id/fLayout_empty_view_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/color_white">
-
-                <include
-                    android:id="@+id/fragment_wonderful_empty"
-                    layout="@layout/layout_wonderful_list_empty_view" />
-            </FrameLayout>
-        </FrameLayout>
+            android:layout_height="match_parent" />
 
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <FrameLayout
+        android:id="@+id/fLayout_empty_view_container"
+        android:layout_width="wrap_content"
+        app:layout_behavior="com.cylan.jiafeigou.widget.AlwaysCenterBehavior"
+        android:layout_height="wrap_content"
+        android:background="@color/color_white">
+
+        <include
+            android:id="@+id/fragment_wonderful_empty"
+            layout="@layout/layout_wonderful_list_empty_view" />
+    </FrameLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
