--- a/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
+++ b/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
@@ -1,31 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lLayout_wonderful_list_empty_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv_empty_layout_content"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/color_white"
-    android:clickable="true"
+    android:drawableTop="@drawable/pic_no_message"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:weightSum="3">
+    android:text="@string/Daily_Great_NO_CONTENTS"
+    android:textColor="@color/color_888888"
+    android:paddingBottom="@dimen/y40"
+    android:textSize="@dimen/sp16" />
 
-
-    <ImageView
-        android:id="@+id/imgv_empty_layout_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/y80"
-        android:src="@drawable/pic_no_message" />
-
-    <TextView
-        android:id="@+id/tv_empty_layout_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imgv_empty_layout_icon"
-        android:layout_marginTop="@dimen/y20"
-        android:gravity="center_horizontal"
-        android:text="@string/Daily_Great_NO_CONTENTS"
-        android:textColor="@color/color_888888"
-        android:textSize="@dimen/sp16" />
-
-</LinearLayout>
