1.消息页面只能加载当天消息 bug 2.bug:#123428报警消息 查看陌生人 查看报警图片时 上啦刷新 提示已加载完成。 报警图片自动消失 3.bug:#123401:AI设备 点击报警消息 点击陌生人 默认选中第一个头像 不会加载第一个头像的报警信息 需要加载

--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -12,9 +12,9 @@
         android:id="@+id/rLayout_home_mine_top"
         android:layout_width="0dp"
         android:layout_height="@dimen/y238"
-        android:background="@drawable/me_bg_top_image"
+
         android:scaleType="fitXY"
-        android:src="#40000000"
+        android:src="@drawable/me_bg_top_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
